cs3310/Assignment 2/submission/test/pass/PrintZero.java
class PrintZero {
    public static void main(String[] a){
        System.out.println(0);
    }
}
